public/examples/errors/missing-assignment.smol
BEGIN
READ(a);
a 5;
WRITE(a);
END